@@ -26,6 +26,15 @@
     gamma correction of CUPS, or use the 600dpi resolution (native
     resolution of the printer).&lt;p&gt;
 
+    Unidirectional printing on the Z12 is possible now and gives a
+    much higher printout quality. Please replace the
+    &lt;tt&gt;gdevlx32.c&lt;/tt&gt; of the driver downloaded from the
+    address shown below by &lt;a
+    href=&quot;/download/printing/gdevlx32.c&quot;&gt;this
+    one&lt;/a&gt; or use the current CVS of &lt;a
+    href=&quot;http://www.cups.org/ghostscript.html&quot;&gt;ESP
+    GhostScript&lt;/a&gt; to be able to do so.&lt;p&gt;
+
     From the Z31 there came out models which need different margin
     settings. If the print head of your Z31 goes over the end of its
     rails and makes strange noise, use the
