@@ -34,8 +34,16 @@
   <functionality>B</functionality>
   <driver>ljet4</driver><!--verified--><!--no "contrib_url"-->
   <comments>
-    <en>Works OK but only in 300 dpi mode. 600 dpi is mostly OK but some glitches appear in text.
-&lt;p&gt;
-This printer is not to be confused with the European-market &lt;a href=&quot;show_printer.cgi?recnum=312297&quot;&gt;EPL-5700L&lt;/a&gt;, which does not work with any current driver (although a Dr H. T. Leung is well underway on that project).</en>
+    <en>
+
+    Works OK but only in 300 dpi mode. 600 dpi is mostly OK but some
+    glitches appear in text.&lt;p&gt;
+
+    This printer is not to be confused with the European-market &lt;a
+    href=&quot;show_printer.cgi?recnum=312297&quot;&gt;EPL-5700L&lt;/a&gt;,
+    which is a winprinter for which there is only partial support for
+    now.
+
+    </en>
   </comments>
 </printer>
