@@ -31,8 +31,10 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
-       Epson provides a free (LGPL) driver for this printer. With this the
-       printer should work to its full extent.
+
+     Epson provides a free (LGPL) driver for this printer. With this
+     the printer should work to its full extent.
+
     </en>
   </comments>
 </printer>
