@@ -18,12 +18,20 @@
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality><!--unknown preferred "driver"--><!--verified--><!--no "contrib_url"-->
+  <functionality>D</functionality><!--unknown preferred "driver"-->
+  <!--verified--><!--no "contrib_url"-->
   <comments>
     <en>
-    Known not to work; not to be confused with the &lt;a
+
+    Known to be a winprinter; not to be confused with the &lt;a
     href=&quot;show_printer.cgi?recnum=Epson-EPL-5900&quot;&gt;EPL-5900&lt;/a&gt;.
     &lt;p&gt;
+
+    Dr H. T. Leung and others are working on a &lt;a
+    href=&quot;http://epsonepl.sourceforge.net/&quot;&gt;driver&lt;/a&gt;;
+    they have reverse-engineered much of the protocol thus
+    far.&lt;p&gt;
+
     </en>
   </comments>
 </printer>
