@@ -1,3 +1,13 @@
+2003-01-18  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/*.xml: Updated texts for the Epson EPL-5700L,
+	  EPL-5700, EPL-5800L, EPL-5800, EPL-5900L to mention that there
+	  is a driver for the "L" models available now. Raised the rating
+	  of the "L" models to "Partailly".
+
+	* db/source/driver/lxm3200-tweaked.xml: Added hint that the
+	  Lexmark Z12 can now also print unidirectionally.
+
 2003-01-15  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/printer/*.xml: Added the HP OfficeJet 520, 570, 580,
